# agora-server

./: .dockerignore  .gitignore  .parcelrc  2025-12.md  2026-01.md  7.md  AGORA.md  AGORA_ARCHITECTURE.md  AGORA_CONTEXT.md  AGY.md  CACHE.md  CONTRIBUTORS.md  DONE.md  Dockerfile  FEDERATION.md  GEMINI.md  NEXT.md  PHILOSOPHY.md  PLAN.md  Philosophy of AI Applications.md  README.md  ROADMAP.md  SERVICES.md  agora-server-worker.service  agora-server.service  build-image.sh  build.sh  bun.lockb  dev_nginx_allowlist.conf  entrypoint.sh  fixtures.csv  gemini.sh  package-lock.json  package.json  pixi.toml  pnpm-lock.yaml  prod.ini  push-image.sh  pyproject.toml  requirements.txt  (+13 more)
.gemini/: settings.json
app/: __init__.py  actions.py  agora.py  config.json  config.py  db.py  exec.py  federation.py  feed.py  forms.py  git_utils.py  graph.py  node.py  package-lock.json  package.json  providers.py  rdf.py  regexes.py  render.py  search.py  semantic.py  sql.py  test_graph.py  test_node.py  util.py  visualization.py
app/.parcel-cache/: 1de79fa0fd2aa419.txt  lock.mdb
app/ctzn/: ctzn.js
app/exec/: README.md  __init__.py  calc.py  date.py  default.py  dice.py  nav.py  placeholder.py  see.py  web.py  wp.py  wt.py
app/js-src/: agora.js  backend.js  chart.js  ctzn.js  demo.ts  draggable.ts  editor.js  fission.js  graph.ts  hover.js  index.js  index.ts  main.js  main.ts  music.ts  package-lock.json  package.json  pull.ts  settings.ts  sortable.ts  starring.ts  util.js  util.ts
app/js-src/games/: conway.ts  hexgame.ts
app/static/: 500.html  robots.txt
app/static/css/: main.css  mobile-dark.css  screen-dark.css  screen-light.css  screen.css
app/static/js/: chunk-MBB4SMMY.js  config.js  config.js.map  ctzn.js  ctzn.js.map  editor.js  force-graph-Z3W24SKM.js  hexgame.js  hover.js  index.browser-4IYMTPL7.js  index.js  index.js.map  lib-AQK4D7UF.js  main.js  raw.js  settings.js  settings.js.map  util.js  util.js.map
app/static/mid/: 2024-07-31T00:02:27+02:00-part1.mid  2024-07-31T00:08:38+02:00-part1.mid  2024-07-31T00:12:13+02:00-part1.mid  2024-07-31T21:30:08+02:00-part1.mid  2024-08-02T21:50:41+02:00-part1.mid  2024-08-02T21:50:41+02:00-part2.mid  2024-08-05T21:40:34+02:00-part1.mid  2024-08-06T00:30:39+02:00-part1.mid  2024-08-06T00:30:39+02:00-part2.mid  2024-08-06T00:37:00+02:00-part1.mid  2024-08-06T00:48:44+02:00-part1.mid  2024-08-10T18:16:17+02:00-part1.mid  2024-08-10T18:17:04+02:00-part1.mid  2024-08-11T15:39:13+02:00-part1.mid  2024-08-16T22:57:07+02:00-part1.mid  2024-08-16T23:01:13+02:00-part1.mid  2024-08-17T02:23:13+02:00-part1.mid  2024-08-17T02:30:25+02:00-part1.mid  2024-08-17T15:05:48+02:00-part1.mid  2024-08-17T15:05:48+02:00-part2.mid  2024-08-17T15:05:48+02:00-part3.mid  2024-08-17T20:06:23+02:00-part1.mid  2024-08-17T20:06:23+02:00-part2.mid  2024-08-17T21:06:31+02:00-part1.mid  2024-08-18T17:03:23+02:00-part1.mid  2024-08-19T22:14:55+02:00-part1.mid  2024-08-22T23:09:05+02:00-part1.mid  2024-08-22T23:09:20+02:00-part1.mid  2024-08-22T23:11:17+02:00-part1.mid  2024-08-22T23:11:47+02:00-part1.mid  2024-08-23T00:14:46+02:00-part1.mid  2024-08-23T01:18:09+02:00-part1.mid  2024-08-23T01:18:09+02:00-part2.mid  2024-08-24T00:31:46+02:00-part1.mid  2024-08-24T00:31:46+02:00-part3.mid  2024-08-24T00:31:46+02:00-part4.mid  2024-08-24T00:32:02+02:00-part1.mid  2024-08-24T00:32:02+02:00-part2.mid  2024-08-24T00:32:02+02:00-part3.mid  2024-08-24T00:32:02+02:00-part4.mid  (+1607 more)
app/static/ts/: async.ts  bind-events.ts
app/storage/: api.py  feed.py  file_engine.py  graph.py  lib.py  maintenance.py  model.py  regexes.py  render.py  sqlite_engine.py  test_model.py
app/templates/: 500.html  activities.html  agoragraph.html  annotations.html  async.html  autopulled.html  base.html  cachez.html  content.html  context.html  ctzn.html  ctzn_login.html  debug_exec.html  delta.html  edit.html  empty.html  federation.html  footer.html  fullsearch.html  games.html  genai.html  graph.html  hexgame.html  index.html  join_overlay.html  journals.html  left.html  links.html  login.html  node.html  node_rendered.html  node_search.html  nodes.html  nodes_rendered.html  overlay.html  profile.html  proposal.html  pulled.html  push.html  recent.html  (+19 more)
bundled/: main.js  util.js
conf/: agora-federation.service  agora-server-worker.service  agora-server-worker.timer  agora-server.service  nginx_example.conf  nginx_tuning_example.conf
experiments/: Dockerfile
gemini/: HANDOFF.md  THE_GARDENER_AND_THE_LOOM.md
scripts/: dump_followers.py  federation_worker.py  reset_db.sh  reset_federation.py  retry_federation.py  test_federation_endpoints.sh  worker.py
scripts/debug/: analyze_days.py  analyze_harakiri.py  analyze_latency.py  analyze_qps_errors.py  analyze_time.py  analyze_top_nodes.py  analyze_traffic_type.py  debug_canon.py  debug_idempotence.py  test_random.py  test_tabs.py  test_tabs2.py
storage/: api.py  file.py
tests/: conftest.py  test_graph.py  test_memory_optimization.py  test_push_duplicates.py  test_search.py  test_timeout.py  test_views.py
