[tool.poetry]
name = "agora-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
black = "22.3.0"
bleach = "3.2.1"
cachelib = "0.2.0"
cachetools = "5.0.0"
cachetools_ext = "0.0.8"
certifi = "2021.10.8"
charset-normalizer = "2.0.7"
click = "8.1.2"
dateparser = "1.0.0"
feedgen = "0.9.0"
feedparser = "6.0.2"
filetype = "1.0.7"
Flask = "1.1.2"
Flask-Caching = "1.10.0"
Flask-Cors = "3.0.10"
Flask-Markdown = "0.3"
Flask-WTF = "0.14.3"
fuzzywuzzy = "0.18.0"
greenlet = "1.1.2"
idna = "3.3"
importlib-metadata = "2.0.0"
isodate = "0.6.0"
itsdangerous = "1.1.0"
jedi = "0.17.2"
Jinja2 = "2.11.2"
jsons = "1.4.0"
lxml = "4.9.0"
Markdown = "3.3.3"
marko = "1.2.0"
MarkupSafe = "1.1.1"
mdx-truly-sane-lists = "1.2"
mezmorize = "0.28.2"
mypy-extensions = "0.4.3"
org-python = "0.3.2"
packaging = "20.4"
parso = "0.7.1"
pathspec = "0.9.0"
platformdirs = "2.5.1"
pyparsing = "2.4.7"
python-dateutil = "2.8.1"
python-Levenshtein = "0.12.1"
pytz = "2020.4"
PyYAML = "5.4.1"
rdflib = "5.0.0"
redis = "3.5.3"
regex = "2020.11.13"
requests = "2.26.0"
sgmllib3k = "1.0.0"
six = "1.15.0"
SQLAlchemy = "1.4.35"
text-unidecode = "1.3"
tomli = "2.0.1"
typed-ast = "1.5.2"
typing-extensions = "4.1.1"
typish = "1.9.1"
tzlocal = "2.1"
unicode-slugify = "0.1.3"
Unidecode = "1.1.2"
urllib3 = "1.26.7"
uWSGI = "2.0.20"
webencodings = "0.5.1"
Werkzeug = "1.0.1"
WTForms = "2.3.3"
zipp = "3.4.0"
igraph = "^0.10.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
